[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gui/GameHud.gd" type="Script" id=1]

[node name="GameHud" type="Control"]
margin_right = 222.0
margin_bottom = 112.0
script = ExtResource( 1 )

[node name="HudPanel" type="Panel" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 110.0

[node name="PanelBox" type="VBoxContainer" parent="HudPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="InformationGrid" type="GridContainer" parent="HudPanel/PanelBox"]
margin_right = 190.0
margin_bottom = 50.0
columns = 2

[node name="TurnsLabel" type="Label" parent="HudPanel/PanelBox/InformationGrid"]
margin_right = 98.0
margin_bottom = 14.0
text = "Current Turn: "

[node name="TurnsValue" type="Label" parent="HudPanel/PanelBox/InformationGrid"]
margin_left = 102.0
margin_right = 110.0
margin_bottom = 14.0
text = "0"

[node name="PlayerLabel" type="Label" parent="HudPanel/PanelBox/InformationGrid"]
margin_top = 18.0
margin_right = 98.0
margin_bottom = 32.0
text = "Current Player: "

[node name="PlayerValue" type="Label" parent="HudPanel/PanelBox/InformationGrid"]
margin_left = 102.0
margin_top = 18.0
margin_right = 110.0
margin_bottom = 32.0

[node name="MovesLabel" type="Label" parent="HudPanel/PanelBox/InformationGrid"]
margin_top = 36.0
margin_right = 98.0
margin_bottom = 50.0
text = "Left Moves: "

[node name="MovesValue" type="Label" parent="HudPanel/PanelBox/InformationGrid"]
margin_left = 102.0
margin_top = 36.0
margin_right = 110.0
margin_bottom = 50.0

[node name="NextButton" type="Button" parent="HudPanel/PanelBox"]
margin_top = 54.0
margin_right = 190.0
margin_bottom = 74.0
disabled = true

[connection signal="pressed" from="HudPanel/PanelBox/NextButton" to="." method="_on_next_action"]
